@@ -20,7 +20,6 @@ import org.springframework.stereotype.Component;
 import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @NoArgsConstructor
@@ -54,7 +53,7 @@ public class NewsletterIssueFactory {
             .findByApprovedDateAfterAndApprovedTrueOrderByApprovedDateAsc(startDate)
             .stream()
             .sorted(Comparator.comparing(blogPost -> blogPost.getBlog().getAuthor()))
-            .collect(Collectors.toList());
+            .toList();
 
         return NewsletterIssue.builder()
             .issueNumber(issueNumber)
